--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 config.py
 
 # Adding additional files.
-API_practice.ipynb_checkpoints
+API_practice.ipynb
 
-random_numbers.ipynb_checkpoints 
+random_numbers.ipynb
 
 
 # Byte-compiled / optimized / DLL files
